force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>bofc__Default_Value__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>