force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Description__c.field-meta.xml
<CustomField>
    <fullName>bofc__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>