force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Display_Format__c.field-meta.xml
<CustomField>
    <fullName>bofc__Display_Format__c</fullName>
    <label>Display Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>