force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>bofc__Field_Label__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>