force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>bofc__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>