force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__HelpText__c.field-meta.xml
<CustomField>
    <fullName>bofc__HelpText__c</fullName>
    <label>HelpText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>