force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Picklist_Val__c.field-meta.xml
<CustomField>
    <fullName>bofc__Picklist_Val__c</fullName>
    <label>Picklist Val</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>