force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Related_To_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>bofc__Related_To_Parent_Object__c</fullName>
    <label>Related To (Parent Object)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>