force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Required__c.field-meta.xml
<CustomField>
    <fullName>bofc__Required__c</fullName>
    <label>Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>