force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>bofc__Starting_Number__c</fullName>
    <label>Starting Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>