force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Test_Picklist__c.field-meta.xml
<CustomField>
    <fullName>bofc__Test_Picklist__c</fullName>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>