force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Unique__c.field-meta.xml
<CustomField>
    <fullName>bofc__Unique__c</fullName>
    <label>Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>