force-app/main/default/objects/bofc__BOFCErrorLogs__c/fields/bofc__Visible_Lines__c.field-meta.xml
<CustomField>
    <fullName>bofc__Visible_Lines__c</fullName>
    <label>Visible Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>