force-app/main/default/objects/bofc__BOFCErrorLogs__c/recordTypes/bofc__Test_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>bofc__Test_Record_Type</fullName>
    <active>true</active>
    <description>Test_Record_Type</description>
    <label>Test Record Type</label>
</RecordType>